Added hazelcast cluster manager